--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "concurrently \"next dev --turbo\" \"tailwindcss -i styles/globals.css -o styles/dist.css -w\"",
+    "build": "tailwindcss -m -i styles/globals.css -o styles/dist.css && next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,6 +20,9 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
-    "eslint-config-prettier": "^8.5.0"
+    "autoprefixer": "^10.4.13",
+    "concurrently": "^7.6.0",
+    "eslint-config-prettier": "^8.5.0",
+    "tailwindcss": "^3.2.4"
   }
 }
