Add Coinbase login integration - Shifted OAuth button into its own component with custom props - TODO: Add integrations with db for account registration and connection

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,9 @@
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
+
+COINBASE_CLIENT_ID=
+COINBASE_CLIENT_SECRET=
+
 NEXTAUTH_URL=http://localhost:3000
 
 JWT_SECRET=
