--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,8 @@ COINBASE_CLIENT_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 
 JWT_SECRET=
+
+DATABASE_URL="postgresql://USER:PASSWORD@HOST:PORT/DATABASE"
+
+# z.enum({"development", "production"})
+NODE_ENV="development"
