--- a/package.json
+++ b/package.json
@@ -11,6 +11,12 @@
   "dependencies": {
     "@headlessui/react": "^1.7.4",
     "@heroicons/react": "^2.0.13",
+    "@next-auth/prisma-adapter": "^1.0.5",
+    "@prisma/client": "^4.7.1",
+    "@trpc/client": "^10.5.0",
+    "@trpc/next": "^10.5.0",
+    "@trpc/react-query": "^10.5.0",
+    "@trpc/server": "^10.5.0",
     "@types/node": "18.11.10",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -19,11 +25,14 @@
     "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
-    "next-auth": "^4.18.0",
+    "next-auth": "^4.18.6",
+    "prisma": "^4.7.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
-    "typescript": "4.9.3"
+    "superjson": "^1.12.0",
+    "typescript": "4.9.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
