--- a/package.json
+++ b/package.json
@@ -25,6 +25,13 @@
     "chart.js": "^4.0.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
+    "next-connect": "^0.13.0",
+    "next-session": "^4.0.5",
+    "passport": "^0.6.0",
+    "passport-coinbase": "^0.1.4",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "passport-oauth2": "^1.6.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "18.2.0",
@@ -34,6 +41,9 @@
   },
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@types/passport": "^1.0.11",
+    "@types/passport-google-oauth2": "^0.1.5",
+    "@types/passport-oauth2": "^1.4.11",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.33.0",
