--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@trpc/next": "^10.0.0",
     "@trpc/react-query": "^10.0.0",
     "@trpc/server": "^10.0.0",
+    "argon2": "^0.30.2",
     "chart.js": "^4.0.1",
     "next": "13.0.2",
     "next-auth": "^4.18.3",
@@ -43,6 +44,7 @@
     "@types/node": "^18.0.0",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth2": "^0.1.5",
+    "@types/passport-local": "^1.0.34",
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
