Add Collections to populate database - Add Collections schema and migration - Add env variable validation - Modified existing env variable usage to validate environment variables - Added Mnemonic API env variable - Added Mnemonic API endpoint types - Added Mnemonic Utility File under `./src/utils` - Added Mnemonic Collections Metadata endpoint

--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,6 @@ COINBASE_CLIENT_SECRET=
 
 # z.enum({"development", "production"})
 NODE_ENV="development"
+
+# Mnemonic Data Crawling
+MNEMONIC_API_KEY=
