--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
     "db:push": "npx prisma db push"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.5",
+    "@headlessui/react": "^1.7.7",
     "@heroicons/react": "^2.0.13",
+    "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
-    "@prisma/client": "^4.5.0",
-    "@tanstack/react-query": "^4.16.0",
-    "@trpc/client": "^10.0.0",
-    "@trpc/next": "^10.0.0",
-    "@trpc/react-query": "^10.0.0",
-    "@trpc/server": "^10.0.0",
+    "@prisma/client": "^4.8.0",
+    "@tanstack/react-query": "^4.20.4",
+    "@trpc/client": "^10.6.0",
+    "@trpc/next": "^10.6.0",
+    "@trpc/react-query": "^10.6.0",
+    "@trpc/server": "^10.6.0",
     "argon2": "^0.30.2",
-    "chart.js": "^4.0.1",
+    "chart.js": "^4.1.1",
     "next": "13.0.2",
-    "next-auth": "^4.18.3",
+    "next-auth": "^4.18.7",
     "next-connect": "^0.13.0",
     "next-session": "^4.0.5",
     "passport": "^0.6.0",
@@ -33,31 +34,32 @@
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
     "react": "18.2.0",
-    "react-chartjs-2": "^5.0.1",
+    "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.0",
     "superjson": "1.9.1",
     "zod": "^3.20.2"
   },
   "devDependencies": {
-    "@tanstack/react-query-devtools": "^4.20.2",
-    "@types/node": "^18.0.0",
+    "@tanstack/react-query-devtools": "^4.20.4",
+    "@types/node": "^18.11.17",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-local": "^1.0.34",
     "@types/passport-oauth2": "^1.4.11",
-    "@types/react": "^18.0.14",
-    "@types/react-dom": "^18.0.5",
-    "@typescript-eslint/eslint-plugin": "^5.33.0",
-    "@typescript-eslint/parser": "^5.33.0",
-    "autoprefixer": "^10.4.7",
-    "eslint": "^8.26.0",
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.0",
+    "@typescript-eslint/parser": "^5.47.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.30.0",
     "eslint-config-next": "13.0.2",
-    "postcss": "^8.4.14",
-    "prettier": "^2.7.1",
+    "postcss": "^8.4.20",
+    "prettier": "^2.8.1",
     "prettier-plugin-tailwindcss": "^0.1.13",
-    "prisma": "^4.5.0",
-    "tailwindcss": "^3.2.0",
-    "typescript": "^4.8.4"
+    "prisma": "^4.8.0",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   },
   "ct3aMetadata": {
     "initVersion": "6.11.3"
