--- a/package.json
+++ b/package.json
@@ -17,19 +17,20 @@
     "@hookform/resolvers": "^2.9.10",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.8.0",
+    "@quixo3/prisma-session-store": "^3.1.10",
     "@tanstack/react-query": "^4.20.4",
-    "@trpc/client": "^10.6.0",
-    "@trpc/next": "^10.6.0",
-    "@trpc/react-query": "^10.6.0",
-    "@trpc/server": "^10.6.0",
+    "@trpc/client": "^10.7.0",
+    "@trpc/next": "^10.7.0",
+    "@trpc/react-query": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "argon2": "^0.30.2",
     "chart.js": "^4.1.1",
+    "express-session": "^1.17.3",
     "next": "13.0.2",
-    "next-auth": "^4.18.7",
     "next-connect": "^0.13.0",
     "next-session": "^4.0.5",
     "nodemailer-react": "^1.0.2",
-    "passport": "^0.6.0",
+    "passport": "^0.5.3",
     "passport-coinbase": "^0.1.4",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
@@ -37,21 +38,22 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.41.0",
+    "react-hook-form": "^7.41.1",
     "superjson": "1.9.1",
+    "swr": "^2.0.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.20.4",
-    "@types/node": "^18.11.17",
+    "@types/node": "^18.11.18",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-local": "^1.0.34",
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
-    "@typescript-eslint/eslint-plugin": "^5.47.0",
-    "@typescript-eslint/parser": "^5.47.0",
+    "@types/react-dom": "^18.0.10",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
+    "@typescript-eslint/parser": "^5.47.1",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.30.0",
     "eslint-config-next": "13.0.2",
