--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "passport-coinbase": "^0.1.4",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
+    "passport-magic-link": "^2.1.0",
+    "passport-magic-login": "^1.2.1",
     "passport-oauth2": "^1.6.1",
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@tanstack/react-query-devtools": "^4.20.4",
     "@types/node": "^18.11.18",
+    "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.11",
     "@types/passport-google-oauth2": "^0.1.5",
     "@types/passport-local": "^1.0.34",
