Migrate env setup to fix windows bugs - BASEURL should be migrated back for production

--- a/.env.example
+++ b/.env.example
@@ -26,5 +26,5 @@ EMAIL_PASSWORD=
 EMAIL_HOST="smtp.gmail.com"
 EMAIL_PORT="465"
 
-# NextJS Port
-PORT=
+# NextJS Port - Should be autoset and referred to by `process.env`
+# PORT=
