--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-headless-accordion": "^1.0.2",
     "react-hook-form": "^7.41.1",
     "superjson": "1.9.1",
     "swr": "^2.0.0",
