--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.5",
+    "react-markdown": "^8.0.4",
+    "remark-gfm": "^3.0.1",
     "superjson": "1.9.1",
     "swr": "^2.0.0",
     "zod": "^3.20.2"
