--- a/package.json
+++ b/package.json
@@ -51,8 +51,9 @@
     "zod": "^3.20.2"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@tanstack/react-query-devtools": "^4.20.9",
-    "@types/chartjs": "^0.0.31",
+    "@types/chart.js": "^2.9.37",
     "@types/node": "^18.11.18",
     "@types/nodemailer": "^6.4.7",
     "@types/passport": "^1.0.11",
