--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.1.0",
     "react-dom": "18.2.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.41.5",
     "react-markdown": "^8.0.4",
     "remark-gfm": "^3.0.1",
@@ -62,6 +63,7 @@
     "@types/passport-oauth2": "^1.4.11",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.10",
+    "@types/react-google-recaptcha": "^2.1.5",
     "@typescript-eslint/eslint-plugin": "^5.48.0",
     "@typescript-eslint/parser": "^5.48.0",
     "autoprefixer": "^10.4.13",
