--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-hook-form": "^7.41.5",
     "react-markdown": "^8.0.4",
     "remark-gfm": "^3.0.1",
+    "sharp": "^0.31.3",
     "superjson": "1.9.1",
     "swr": "^2.0.0",
     "zod": "^3.20.2"
