Dark Mode toggle and deployment scripts

--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,10 @@ GOOGLE_CLIENT_SECRET=
 COINBASE_CLIENT_ID=
 COINBASE_CLIENT_SECRET=
 
+# Google Recaptcha
+NEXT_PUBLIC_RECAPTCHA_SITE_KEY=
+RECAPTCHA_SITE_SECRET=
+
 # z.enum({"development", "production"})
 NODE_ENV="development"
 
