--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,6 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: pnpm/action-setup@v2.2.4
+        with:
+          version: 7.2.0
       - name: Install Vercel CLI
         run: pnpm install --global vercel@latest
       - name: Pull Vercel Environment Information
