--- a/.github/workflows/dependabot.yml
+++ b/.github/workflows/dependabot.yml
@@ -4,6 +4,8 @@
 # https://docs.github.com/github/administering-a-repository/configuration-options-for-dependency-updates
 
 version: 2
+on: push
+
 updates:
   - package-ecosystem: "" # See documentation for possible values
     directory: "/" # Location of package manifests
